--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "url": "https://github.com/butterproject/butter-desktop.git"
   },
   "license": "GPL-3.0",
-  "main": "app://host/src/app/index.html",
+  "main": "src/app/index.html",
   "version": "0.3.8-5a",
   "releaseName": "There's nothing on TV",
   "scripts": {
@@ -23,7 +23,6 @@
   "window": {
     "title": "Butter",
     "icon": "./src/app/images/icon.png",
-    "toolbar": false,
     "frame": false,
     "min_width": 960,
     "min_height": 520,
